Responsive design for phones and tablets

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Skills Marketplace</title>
-    <link rel="stylesheet" href="styles.css" />
+    
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176043212-1"></script>
@@ -37,7 +37,7 @@
 
   gtag('config', 'UA-176043212-1');
 </script>
-
+<link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
