Fixed for deployment

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,7 @@
 
   gtag('config', 'UA-176043212-1');
 </script>
-<link rel="stylesheet" href="/styles.css" />
+<link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
