added service page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,6 +38,7 @@
   gtag('config', 'UA-176043212-1');
 </script>
 <link rel="stylesheet" href="./styles.css" />
+<script src="https://kit.fontawesome.com/669c9d80d0.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
